# twilight

./: .gitignore  Cargo.toml  README.md
crates/: README.md
crates/twilight-cli/: Cargo.toml  README.md
crates/twilight-cli/src/: main.rs
crates/twilight-core/: Cargo.toml  README.md
crates/twilight-core/src/: atmosphere.rs  gas_absorption.rs  gas_absorption_data.rs  geometry.rs  lib.rs  path_guide.rs  photon.rs  scattering.rs  single_scatter.rs  spectrum.rs
crates/twilight-cpu/: Cargo.toml  README.md
crates/twilight-cpu/src/: gpu_dispatch.rs  lib.rs  pipeline.rs  simulation.rs  tracer.rs
crates/twilight-data/: Cargo.toml  README.md
crates/twilight-data/src/: aerosol.rs  atmosphere_profiles.rs  builder.rs  cloud.rs  lib.rs  ozone_xsec.rs  solar_spectrum.rs
crates/twilight-ffi/: Cargo.toml  README.md
crates/twilight-ffi/src/: lib.rs
crates/twilight-gpu/: Cargo.toml  README.md
crates/twilight-gpu/shaders/: garstang_zenith.spv  hybrid_scatter.spv  mcrt_trace.spv  single_scatter.spv  twilight.comp  twilight.cu  twilight.metal  twilight.wgsl
crates/twilight-gpu/src/: buffers.rs  cuda.rs  lib.rs  metal.rs  oracle.rs  parity.rs  tests.rs  vulkan.rs  wgpu_backend.rs
crates/twilight-skyglow/: Cargo.toml  README.md
crates/twilight-skyglow/src/: angular.rs  bortle.rs  garstang.rs  lib.rs  spectrum.rs
crates/twilight-solar/: Cargo.toml  README.md
crates/twilight-solar/src/: de440.rs  earth_rotation.rs  lib.rs  spa.rs  spa_tables.rs  spk.rs
crates/twilight-terrain/: Cargo.toml  README.md
crates/twilight-terrain/src/: cache.rs  copernicus.rs  geotiff.rs  horizon.rs  lib.rs  projection.rs
crates/twilight-terrain/src/lidar/: denmark.rs  mod.rs
crates/twilight-threshold/: Cargo.toml  README.md
crates/twilight-threshold/src/: lib.rs  luminance.rs  threshold.rs  vision.rs
crates/twilight-weather/: Cargo.toml  README.md
crates/twilight-weather/src/: api.rs  lib.rs  mapping.rs
tools/: gen_gas_xsec.py
