[package]
name = "twilight-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for twilight prayer time computation"

[features]
default = ["gpu"]
gpu = ["dep:twilight-gpu", "twilight-cpu/gpu"]

[dependencies]
twilight-core = { workspace = true }
twilight-solar = { workspace = true }
twilight-data = { workspace = true }
twilight-cpu = { path = "../twilight-cpu" }
twilight-threshold = { workspace = true }
twilight-weather = { workspace = true }
twilight-terrain = { workspace = true }
twilight-skyglow = { workspace = true }
twilight-gpu = { workspace = true, optional = true, features = ["metal"] }
clap = { version = "4", features = ["derive", "env"] }
