[package]
name = "twilight-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU compute backends for twilight MCRT (CUDA, Metal, Vulkan, WebGPU)"

[features]
default = []
cuda = ["dep:cudarc"]
metal = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-metal", "dep:block2"]
vulkan = ["dep:ash", "dep:gpu-allocator"]
webgpu = ["dep:wgpu"]

[dependencies]
twilight-core = { workspace = true }
twilight-data = { workspace = true }
twilight-threshold = { workspace = true }
twilight-skyglow = { workspace = true }

# CUDA backend
cudarc = { version = "0.19", optional = true }

# Metal backend
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSError", "NSString"] }
objc2-metal = { version = "0.3", optional = true, features = [
    "MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLComputeCommandEncoder",
    "MTLComputePipeline", "MTLLibrary", "MTLResource", "MTLBuffer",
    "MTLArgument", "MTLCommandEncoder", "MTLTypes",
] }
block2 = { version = "0.6", optional = true }

# Vulkan backend
ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.28", optional = true, default-features = false, features = ["vulkan", "std"] }

# WebGPU backend (WASM)
wgpu = { version = "28", optional = true }

[dev-dependencies]
twilight-cpu = { workspace = true }
