[package]
name = "twilight-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terrain masking for twilight prayer times. Copernicus GLO-30 + national LiDAR."

[dependencies]
tiff = { version = "0.11", default-features = false, features = ["deflate"] }
ureq = "2"

[dev-dependencies]
