[package]
name = "twilight-weather"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Real-time weather data for twilight MCRT simulations via Open-Meteo API"

[dependencies]
twilight-data = { path = "../twilight-data" }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
